# OBRTools

./: .gitignore  .gitmodules  README.md
.github/workflows/: release-no_carry_weight.yml
NoCarryWeight/: CMakeLists.txt  OBR-NoCarryWeight_Acknowledgements.txt  README.md  build.sh
NoCarryWeight/docs/: CHANGELOG.md  nexus-bbcode.txt
NoCarryWeight/src/: aob_scanner.cpp  aob_scanner.h  constants.h  constants.hpp  dllmain.cpp  dllmain_obse64.cpp  logger.cpp  logger.h  mod_core.cpp  mod_core.hpp  utils.h  utils.hpp  version.cpp  version.h
